--- a/Project 01 - Barbershop site/pages/home/style.css
+++ b/Project 01 - Barbershop site/pages/home/style.css
@@ -10,7 +10,7 @@
 }
 
 #background {
-    background-image: url("./fundo.jpg");
+    background-image: url("../../assets/fundo.jpg");
     background-size: 100%;
     height: 100vh;
     overflow: hidden;
@@ -25,11 +25,13 @@ header {
     border-bottom: 1px solid rgb(255, 255, 255);
     padding: 5px;
     z-index: 2;
+    text-shadow: 2px 2px 2px #000000;
 }
 
 header a {
     font-size: 32px;
     font-weight: bold;
+    
 }
 
 nav a {
