--- a/Project 01 - Barbershop site/pages/contact/style.css
+++ b/Project 01 - Barbershop site/pages/contact/style.css
@@ -13,6 +13,7 @@
     background-image: url("../../assets/fundo.jpg");
     background-size: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .smaller {
