--- a/Project 04 - Resto/style.css
+++ b/Project 04 - Resto/style.css
@@ -91,7 +91,8 @@ section .content {
     font-size: 16px;
     color: black;
     font-weight: 600;
-}
+    padding: 0 30px;
+} 
 
 .leftContent .btn2 img{ 
     width: 35px;
