--- a/Project 05 - File Sharing Web App/style.css
+++ b/Project 05 - File Sharing Web App/style.css
@@ -55,3 +55,33 @@
     opacity: 100%
 }
 
+/* =-=-=-=-= Content =-=-=-=-= */
+.content {
+    background-color: #F0F5FD;
+    padding: 10px 50px;
+}
+
+/*  =-=-=-=-= Search bar =-=-=-=-= */
+.content .search {
+    background-color: #F0F5FD;
+    height: 80px;
+    padding: 20px 0px;
+    margin-bottom: 50px;
+}
+
+.content .search input {
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+.content .search input::placeholder {
+    padding: 10px;
+    background-image: url(assets/icons/Content/icons8-search-50.png);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: right;
+}
+
+/* =-=-=-= Quick Access =-=-=-= */
