--- a/Project 05 - File Sharing Web App/style.css
+++ b/Project 05 - File Sharing Web App/style.css
@@ -15,7 +15,6 @@
     display: grid;
     grid-template-columns: 150px 1fr 1fr;
     height: 100vh;
-    overflow-y: scroll;
 }
 
 /* =-=-=-=-= Left side bar =-=-=-=-= */
@@ -158,17 +157,56 @@
     gap: 25px;
 }
 
-.preview .cards .biggerCard img{
-    width: 100%;
-    border-radius: 10px;
+.card{
+    position: relative;
 }
 
-.preview .cards .smallerCard img{
+.preview .card img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
 }
 
+.btnContainer {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    border-radius: 15px;
+    background-color: rgba(51, 51, 51, 0.37);
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: flex-end;
+    color: white;
+    font-weight: 300;
+}
+
+.preview .card .btnContainer div.playButton {
+    background-color: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-self: flex-end;
+}
+
+.preview .card .btnContainer img {
+    width: 20px;
+    height: 20px;
+    
+}
+
+.musicText {
+    display: flex;
+    flex-direction: column;
+}
+
+.musicText h1 {
+    font-weight: 400;
+}
 
 /* =-=-=-=-= Right side bar =-=-=-=-= */
 .rightSideBar {
