Put scroll on content

--- a/Project 05 - File Sharing Web App/style.css
+++ b/Project 05 - File Sharing Web App/style.css
@@ -13,7 +13,7 @@
 .container {
     padding: 12px;
     display: grid;
-    grid-template-columns: 150px 1fr 1fr;
+    grid-template-columns: 150px 1fr 300px;
     height: 100vh;
 }
 
@@ -59,6 +59,7 @@
 .content {
     background-color: #F0F5FD;
     padding: 10px 50px;
+    overflow-y: scroll;
 }
 
 /*  =-=-=-=-= Search bar =-=-=-=-= */
