--- a/Project 05 - File Sharing Web App/style.css
+++ b/Project 05 - File Sharing Web App/style.css
@@ -276,6 +276,7 @@
 .rightSideBar {
     background-color: #E0E9FC;
     padding: 40px 30px;
+    border-radius: 0 12px 12px 0;
 }
 
 .rightSideBar header {
@@ -329,6 +330,7 @@
 }
 
 .rightSideBar .download .img img{
+    transform: translateY(-20%);
     width: 30px;
 }
 
