--- a/Project 05 - File Sharing Web App/style.css
+++ b/Project 05 - File Sharing Web App/style.css
@@ -67,7 +67,7 @@
     background-color: #F0F5FD;
     height: 80px;
     padding: 20px 0px;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
 }
 
 .content .search input {
@@ -136,13 +136,18 @@
     margin-bottom: 40px;
 }
 
-/* =-=-=-=-= Preview =-=-=-=-= */preview header, .recentFiles header {
-    display: grid;
+/* =-=-=-=-= Preview =-=-=-=-= */
+.preview header {
+display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 15px;
 }
 
-.preview header p, .recentFiles header p {
+.preview header h1 {
+    font-weight: 500;
+}
+
+.preview header p {
     justify-self: flex-end;
     color: blue;
     cursor: pointer;
@@ -276,7 +281,6 @@
 .rightSideBar {
     background-color: #E0E9FC;
     padding: 40px 30px;
-    border-radius: 0 12px 12px 0;
 }
 
 .rightSideBar header {
@@ -330,7 +334,6 @@
 }
 
 .rightSideBar .download .img img{
-    transform: translateY(-20%);
     width: 30px;
 }
 
@@ -379,6 +382,6 @@
 
 .rightSideBar .fileReceived p {
     font-weight: 400;
-    color: rgba(0, 0, 0, 0.582);
+    color: rgba(0, 0, 0, 0.541);
     margin-top: 10px;
 }
