--- a/Project 07 - Clone Instagram/style.css
+++ b/Project 07 - Clone Instagram/style.css
@@ -86,7 +86,7 @@ section .left {
     width: 100%;
     overflow: hidden;
 }
-/*
+
 section .left .storys {
     width: 100%;
     height: 125px;
@@ -97,44 +97,7 @@ section .left .storys {
     position: relative;
     display: flex;
     align-items: center;
-}
-
-section .left .storys .storiesContainer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    overflow-y: hidden;
-    overflow-x: scroll;
-}
-
-section .left .storys .storiesControls {
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    padding: 10px;
-    color: white;
-    font-size: 20px;
-    background-color: red;
-}
-
-section .left .storys .storiesControls span:last-child {
-    transform: translateX(50px)
-}
-
-section .left .storys .storiesContainer::-webkit-scrollbar {
-    -webkit-appearance: none;
-} */
-section .left .storys {
-    width: 100%;
-    height: 125px;
-    background-color: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.219);
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.253);
-    border-radius: 5px;
-    position: relative;
-    display: flex;
-    align-items: center;
+    margin-bottom: 25px;
 }
 
 section .left .storys .storiesContainer {
@@ -188,8 +151,35 @@ section .left .storys .story h1{
     margin-top: 5px;
 }
 
-section .right {
+/* =-=-=-=-= Posts =-=-=-=-= */
+section .post header {
+    height: 60px;
     width: 100%;
-    height: 500px;
-    background-color: tomato;
+    display: flex;
+    padding: 16px;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.151);
+    border-radius: 5px 5px 0 0 ;
+    display: flex;
+    align-items: center;
+    /* background-color: blue; */
+}
+
+section .post header img {
+    height: 120%;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+section .post header h1 {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+section .post header span {
+    transform: translate(400px, -20%);
+    font-size: 30px;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
