--- a/Project 07 - Clone Instagram/style.css
+++ b/Project 07 - Clone Instagram/style.css
@@ -158,6 +158,12 @@ section .post {
     border: 1px solid rgba(0, 0, 0, 0.151);
     border-radius: 5px;
 }
+
+section .post {
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.253);
+}
+
 /* =-=-=-=-= Post header =-=-=-=-= */
 section .post header {
     height: 60px;
@@ -169,11 +175,11 @@ section .post header {
     border-radius: 5px 5px 0 0 ;
     display: flex;
     align-items: center;
-    /* background-color: blue; */
 }
 
 section .post header img {
-    height: 120%;
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
     margin-right: 15px;
     cursor: pointer;
@@ -216,8 +222,77 @@ section .buttons li{
     list-style: none;
     font-size: 24px;
     margin-right: 15px;
+    cursor: pointer;
+}
+
+section .buttons li:first-child{
+    color: #ED4956;
 }
 
 section .buttons li:last-child{
     transform: translateX(410px);
+}
+
+/* =-=-=-=-= Post likes =-=-=-=-= */
+section .likes {
+    width: 100%;
+    height: 50px;
+    padding: 0 20px 25px 20px;
+    margin-bottom: 10px;
+}
+
+section .likes .firstLine {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    margin-bottom: 15px;
+}
+
+section .likes .firstLine img{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin-right: 13px;
+}
+
+section .likes .firstLine p {
+    font-size: 15px;
+    font-weight: 300;
+}
+
+section .likes .firstLine p strong {
+    font-weight: 500;
+}
+
+section .likes span {
+    font-size: 10px;
+    font-weight: 200;
+}
+
+/* =-=-=-=-= Post Comment =-=-=-=-= */
+section .comment {
+    border-top: 1px solid #00000023;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+}
+
+section .comment span {
+    font-size: 25px; 
+    color: rgba(0, 0, 0, 0.61);
+    margin-right: 15px;
+}
+
+section .comment input {
+    border: 0;
+    width: 100%;
+}
+
+section .comment button {
+    background-color: transparent;
+    border: none;
+    color: rgba(0, 0, 0, 0.288);
+    font-weight: 600;
 }
