--- a/Project 08 - Youtube clone/style.css
+++ b/Project 08 - Youtube clone/style.css
@@ -160,7 +160,7 @@ header .right img{
 
 .container .top a,
 .container .playlists a {
-    color: rgba(255, 255, 255, 0.767);
+    color: rgba(255, 255, 255, 0.918);
     font-size: 15px;
 }
 
@@ -182,8 +182,37 @@ header .right img{
     color: white;
 }
 
+.playlists {
+    border-bottom: 1px solid #39383B;
+}
+
 .playlists a {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+/* =-=-=-= Subscriptions =-=-=-= */
+.container .subscriptions h1{
+    font-size: 15px;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 0.514);
+    text-transform: uppercase;
+    margin: 15px 0 10px 40px;
+}
+
+.container .subscriptions .channel {
+    margin-left: 40px;
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.904);
+}
+
+.container .subscriptions .channel img {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 15px;
 }
