--- a/Project 08 - Youtube clone/style.css
+++ b/Project 08 - Youtube clone/style.css
@@ -170,6 +170,12 @@ section {
     font-size: 15px;
 }
 
+.container .menu .top a:hover,
+.container .menu .playlists a:hover,
+.container .subscriptions .channel:hover {
+    background-color: #39383B;
+}
+
 .container .menu .top a i,
 .container .menu .playlists a i {
     font-size: 20px;
@@ -208,7 +214,6 @@ section {
 }
 
 .container .menu .subscriptions .channel {
-    margin-left: 40px;
     display: flex;
     align-items: center;
     padding: 10px 0;
@@ -220,6 +225,7 @@ section {
     height: 25px;
     width: 25px;
     border-radius: 50%;
+    margin-left: 40px;
     margin-right: 15px;
 }
 
